compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__set_member_op_wrong_types_not_in.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "\n    type ts : set of boolean\n    var s : ts\n\n    % should all produce booleans\n    var _v_res : boolean\n\n    % not a set\n    _v_res := true ~in true\n    % incompatible element types\n    _v_res := 1 ~in s\n    "

---
"<anonymous>"@(FileId(1), 15..29) [Declared]: <error>
"ts"@(FileId(1), 10..12) [Resolved(Type)]: set[DefId(LibraryId(0), LocalDefId(1))] of boolean
"s"@(FileId(1), 38..39) [Declared]: set[DefId(LibraryId(0), LocalDefId(1))] of boolean
"_v_res"@(FileId(1), 88..94) [Declared]: boolean
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 141..144: mismatched types for `not in`
| note in file FileId(1) for 145..149: this is of type `boolean`
| error in file FileId(1) for 145..149: `boolean` is not a set type
| info: operand must be a set
error in file FileId(1) at 199..202: mismatched types for `not in`
| note in file FileId(1) for 203..204: this is of type `set ts (of boolean)`
| note in file FileId(1) for 197..198: this is of type `{integer}`
| error in file FileId(1) for 203..204: `{integer}` is not the same as `boolean`
| info: operand and element type must be the same
