compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__sized_char_const_err.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var _ : char(1.0 div 0.0)"

---
ty_nodes:
    Idx::<Type>(0) TyRef(Error)
def_kinds:
    DefId(0) Var(TyRef(Error))
error at 17..20: division by zero in compile-time expression
