compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__sized_char_dyn_sized.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "var N : int var _ : char(N)"

---
"N"@(FileId(1), 4..5) [Declared]: int
"_"@(FileId(1), 16..17) [Declared]: char_n Fixed(Unevaluated(LibraryId(0), BodyId(0)))
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 20..27: unsupported type
| error in file FileId(1) for 20..27: dynamically sized `char(N)` isn't supported yet
